youker-assistant (2.1.3) xenial; urgency=low

  * Translation for arm64.

 -- lixiang <lixiang@kylinos.cn>  Wed, 18 Jan 2017 15:35:07 +0800

youker-assistant (2.1.2) xenial; urgency=low

  * Fixed ip address, memory info and hdinfo.
  * Adjust the close button position accord to desktop environment.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 28 Dec 2016 12:03:36 +0800

youker-assistant (2.0.9) xenial; urgency=low

  * Add depends.
  * Modify cpuinfo.py.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 12 Oct 2016 23:12:34 +0800

youker-assistant (2.0.8-0ubuntu1) xenial; urgency=low

  * Deal with org.gnome.settings-daemon.peripherals.touchpad.
  * Replace psutil.get_process_list with psutil.process_iter.
  * Optimized scan display interface.
  * Remove processmanager.
  * Modified control file for python 2.7.
  * Add depends for python 2.7.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 27 Apr 2016 09:49:25 +0800

youker-assistant (2.0.5) wily; urgency=low

  * Distinguish system structure.
  * Modify translations(LP: #1480175).
  * Wily replaces org.gnome.settings-daemon.peripherals.touchpad with org.gnome.desktop.peripherals.touchpad.
  * Fixed session dbus daemon(LP: #1475090).
  * Set fixed size for main window.
  * Make scan result showed more uniform.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 04 Dec 2015 15:59:29 +0800

youker-assistant (2.0.3) wily; urgency=low

  * Access FT Arm settings and information.
  * Deal with situation when the scanning garbage is empty.
  * Display hardware manufacturer logo.
  * Add Gio.Settings notify for Unity and Mate settings.
  * Make interface switching more smoothly.
  * Adjust the layout of interface.
  * Beautify skin center, menu, info module and setting module.
  * Rewrite skin center, aboutdialog and animation.
  * Add upgrade function.
  * Delete debug logs and command history.
  * Rewrite camera module and replace pygame with opencv.